# TaskList

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  steps.txt
src/core/: admin.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/tasklist/: settings.py  urls.py
